--- a/tainanfist/index.html
+++ b/tainanfist/index.html
@@ -6390,18 +6390,14 @@ A為&quot;一(1)&quot;、B為&quot;三(3)&quot;、C為&quot;祀(4)&quot;、D為&
 （請關閉視窗再次輸入答案）
 
 &lt;&lt;linkappend &#39;觀看提示&#39;&gt;&gt;
-#壁畫1是「小聖降大聖」，與《西遊記》的@@color:green;〈觀音赴會問原因　小聖施威降大聖〉@@有關
-#壁畫2是「八卦爐中逃」，與《西遊記》的@@color:green;〈八卦爐中逃大聖　五行山下定心猿〉@@有關
-#壁畫3與《西遊記》的@@color:green;〈觀音院唐僧脫難　高老莊行者降魔〉@@有關
-#壁畫4與《西遊記》的@@color:green;〈八戒大戰流沙河　木叉奉法收悟淨〉@@有*關
-#壁畫5是「三打白骨精」，與《西遊記》的@@color:green;〈屍魔三戲唐三藏　聖僧恨逐美猴王〉@@有關
+#壁畫1是「三打白骨精」，與《西遊記》的@@color:green;〈屍魔三戲唐三藏　聖僧恨逐美猴王〉@@有關
+#壁畫2與《西遊記》的@@color:green;〈八戒大戰流沙河　木叉奉法收悟淨〉@@有關
+#壁畫3是「小聖降大聖」，與《西遊記》的@@color:green;〈觀音赴會問原因　小聖施威降大聖〉@@有關
 
 &lt;&lt;linkreplace &#39;告訴我正確答案&#39;&gt;&gt;根據壁畫故事所屬《西遊記》回數，來判斷順序：
-#壁畫1為《西遊記》第六回，順序是@@color:red;3@@。
-#壁畫2為《西遊記》第七回，順序是@@color:red;5@@。
-#壁畫3為《西遊記》第十八回，順序是@@color:red;4@@。
-#壁畫4為《西遊記》第二十二回，順序是@@color:red;1@@。
-#壁畫5為《西遊記》第二十七回，順序是@@color:red;2@@。
+#壁畫1的對手是@@color:red;白骨精@@。
+#壁畫2的對手是@@color:red;沙悟淨@@。
+#壁畫3的對手是@@color:red;二郎神@@。
 &lt;&lt;/linkreplace&gt;&gt;&lt;&lt;/linkappend&gt;&gt;</tw-passagedata><tw-passagedata pid="154" name="第三章關卡2.5提示" tags="" position="2800,900" size="100,100">@@color:red;好像不是喔，再試一次？@@
 （請關閉視窗再次輸入答案）
 
