--- a/tainanfist/index.html
+++ b/tainanfist/index.html
@@ -6480,7 +6480,7 @@ A為&quot;一(1)&quot;、B為&quot;三(3)&quot;、C為&quot;祀(4)&quot;、D為&
 從實際觀察可知，廟中立柱的顏色是黑色，非黑色的立柱就是被汙染的立柱！
 
 &lt;&lt;linkreplace &#39;告訴我正確答案&#39;&gt;&gt;黑色立柱選「保留顏色」，其他顏色的立柱選「刮除汙染」。&lt;&lt;/linkreplace&gt;&gt;&lt;&lt;/linkappend&gt;&gt;
-&lt;&lt;button &#39;返回&#39; &#39;第四章關卡2-1&#39;&gt;&gt;&lt;&lt;/button&gt;&gt;
+&lt;&lt;button &#39;返回&#39; &#39;第四章關卡2&#39;&gt;&gt;&lt;&lt;/button&gt;&gt;
 &lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="164" name="第四章3" tags="autosave center" position="3600,300" size="100,100">&lt;&lt;set $story to 1&gt;&gt;
 &lt;h2 class=&quot;fancy&quot;&gt;第四章&lt;/h2&gt;&lt;h1&gt;追查&lt;/h1&gt;
 &lt;div id=&#39;story&#39;&gt;&lt;&lt;include &#39;第四章3內文&#39;&gt;&gt;&lt;/div&gt;
