--- a/tainanfist/index.html
+++ b/tainanfist/index.html
@@ -4391,7 +4391,7 @@ Normal text. Normal text. Normal text. Normal text. Normal text. //emphasised te
 &lt;/div&gt;
 &lt;&lt;next&gt;&gt;&lt;&lt;replace &#39;#storylink&#39;&gt;&gt;&lt;&lt;button &#39;繼續&#39; &#39;序章0-2&#39;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;&lt;/replace&gt;&gt;
 &lt;&lt;/timed&gt;&gt;
-&lt;span id=&#39;storylink&#39;&gt;&lt;/span&gt;</tw-passagedata><tw-passagedata pid="19" name="選擇章節" tags="noreturn" position="100,100" size="100,100">&lt;div style=&#39;text-align: left; padding: 0 5%;&#39;&gt;
+&lt;span id=&#39;storylink&#39;&gt;&lt;/span&gt;9</tw-passagedata><tw-passagedata pid="19" name="選擇章節" tags="noreturn" position="100,100" size="100,100">&lt;div style=&#39;text-align: left; padding: 0 5%;&#39;&gt;
   &lt;&lt;link &#39;【序章】&#39;&gt;&gt;&lt;&lt;goto &#39;序章1&#39;&gt;&gt;&lt;&lt;script&gt;&gt;Dialog.close();&lt;&lt;/script&gt;&gt;&lt;&lt;/link&gt;&gt;
   └&lt;&lt;link &#39;【序章關卡】&#39;&gt;&gt;&lt;&lt;goto &#39;序章關卡&#39;&gt;&gt;&lt;&lt;script&gt;&gt;Dialog.close();&lt;&lt;/script&gt;&gt;&lt;&lt;/link&gt;&gt;
   
@@ -6462,7 +6462,7 @@ A為&quot;一(1)&quot;、B為&quot;三(3)&quot;、C為&quot;祀(4)&quot;、D為&
 開基靈佑宮主殿遷移至三川門前，整座廟的方位反向成為「坐東朝西」，把它反轉後就是最初興建時的方位啦！
 
 &lt;&lt;linkreplace &#39;告訴我正確答案&#39;&gt;&gt;「坐東朝西」的反向就是「坐西朝東」！
-&lt;&lt;/linkreplace&gt;&gt;&lt;&lt;/linkappend&gt;&gt;</tw-passagedata><tw-passagedata pid="161" name="第四章關卡2" tags="autosave center" position="3600,800" size="100,100">&lt;h2 class=&quot;fancy&quot;&gt;遊戲關卡&lt;/h2&gt;&lt;h1&gt;復原廟中立柱「本色」&lt;/h1&gt;
+&lt;&lt;/linkreplace&gt;&gt;&lt;&lt;/linkappend&gt;&gt;</tw-passagedata><tw-passagedata pid="161" name="第四章關卡2" tags="autosave center" position="3600,800" size="100,100">&lt;&lt;set $colorchoice to 1&gt;&gt;&lt;h2 class=&quot;fancy&quot;&gt;遊戲關卡&lt;/h2&gt;&lt;h1&gt;復原廟中立柱「本色」&lt;/h1&gt;
 @@color:crimson;根據玄天上帝的指示，廟中立柱被施法的油漆污染，請你們將其復原「本色」。@@
 
 對照@@color:green;廟中立柱的實際顏色@@，找出被汙染的立柱復原顏色。
