下架正式版

--- a/tainanfist/demo.html
+++ b/tainanfist/demo.html
@@ -4391,7 +4391,7 @@ Normal text. Normal text. Normal text. Normal text. Normal text. //emphasised te
 &lt;/div&gt;
 &lt;&lt;next&gt;&gt;&lt;&lt;replace &#39;#storylink&#39;&gt;&gt;&lt;&lt;button &#39;繼續&#39; &#39;序章0-2&#39;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;&lt;/replace&gt;&gt;
 &lt;&lt;/timed&gt;&gt;
-&lt;span id=&#39;storylink&#39;&gt;&lt;/span&gt;</tw-passagedata><tw-passagedata pid="19" name="選擇章節" tags="noreturn" position="100,100" size="100,100">&lt;div style=&#39;text-align: left; padding: 0 5%;&#39;&gt;
+&lt;span id=&#39;storylink&#39;&gt;&lt;/span&gt;9</tw-passagedata><tw-passagedata pid="19" name="選擇章節" tags="noreturn" position="100,100" size="100,100">&lt;div style=&#39;text-align: left; padding: 0 5%;&#39;&gt;
   &lt;&lt;link &#39;【序章】&#39;&gt;&gt;&lt;&lt;goto &#39;序章1&#39;&gt;&gt;&lt;&lt;script&gt;&gt;Dialog.close();&lt;&lt;/script&gt;&gt;&lt;&lt;/link&gt;&gt;
   └&lt;&lt;link &#39;【序章關卡】&#39;&gt;&gt;&lt;&lt;goto &#39;序章關卡&#39;&gt;&gt;&lt;&lt;script&gt;&gt;Dialog.close();&lt;&lt;/script&gt;&gt;&lt;&lt;/link&gt;&gt;
   
@@ -6215,7 +6215,7 @@ Llogo.png</tw-passagedata><tw-passagedata pid="79" name="第六章1" tags="autos
 &lt;li&gt;點擊功能列中 &lt;img style= &quot;display: inline;&quot; src=&quot;media/img/setting.png&quot; height=&quot;20px&quot;&gt; 可以進行文字字體、文字大小與開關通知的設定。&lt;/li&gt;
 &lt;li&gt;功能列中的 &lt;img style= &quot;display: inline;&quot; src=&quot;media/img/save.png&quot; height=&quot;20px&quot;&gt; 可以儲存遊戲進度； &lt;img style= &quot;display: inline;&quot; src=&quot;media/img/restart.png&quot; height=&quot;20px&quot;&gt; 則可以清除所有遊戲資料，從頭開始遊戲。&lt;/li&gt;
 &lt;li&gt;遊戲內建自動存檔功能，若@@color:red;因故關閉遊戲程式導致遊戲進度重置@@，只需使用同一瀏覽器重新開啟遊戲網址，點擊功能列中的 &lt;img style= &quot;display: inline;&quot; src=&quot;media/img/save.png&quot; height=&quot;20px&quot;&gt; 匯入存檔，或是從下側選單中的 &lt;img style= &quot;display: inline;&quot; src=&quot;media/img/datamenu.png&quot; height=&quot;20px&quot;&gt; 選擇欲遊玩的章節、關卡。&lt;/li&gt;
-&lt;/ol&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="131" name="教學說明" tags="autosave center" position="600,200" size="100,100">&lt;&lt;run showheader()&gt;&gt;&lt;&lt;run showfooter()&gt;&gt;&lt;h1 class=&quot;fancy&quot;&gt;遊戲教學&lt;/h1&gt;
+&lt;/ol&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="131" name="教學說明" tags="center" position="600,200" size="100,100">&lt;&lt;run showheader()&gt;&gt;&lt;&lt;run showfooter()&gt;&gt;&lt;h1 class=&quot;fancy&quot;&gt;遊戲教學&lt;/h1&gt;
 &lt;&lt;include &#39;遊戲教學&#39;&gt;&gt;
 &lt;&lt;button &quot;開始遊戲&quot; &quot;序章0-1&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;</tw-passagedata><tw-passagedata pid="132" name="第一章2-0" tags="autosave nofooter center tvscene" position="1275,200" size="100,100">&lt;&lt;run clearContent(&quot;decoration-separator&quot;)&gt;&gt;&lt;img src=&quot;media/img/scene01.png&quot; width=&quot;100%&quot; style=&quot;max-width: 600px;&quot;&gt;&lt;div id=&#39;scene&#39;&gt;\
 @@.delayed;你打出的掌法，在空間發出一陣強風！@@
@@ -6462,12 +6462,12 @@ A為&quot;一(1)&quot;、B為&quot;三(3)&quot;、C為&quot;祀(4)&quot;、D為&
 開基靈佑宮主殿遷移至三川門前，整座廟的方位反向成為「坐東朝西」，把它反轉後就是最初興建時的方位啦！
 
 &lt;&lt;linkreplace &#39;告訴我正確答案&#39;&gt;&gt;「坐東朝西」的反向就是「坐西朝東」！
-&lt;&lt;/linkreplace&gt;&gt;&lt;&lt;/linkappend&gt;&gt;</tw-passagedata><tw-passagedata pid="161" name="第四章關卡2" tags="autosave center" position="3600,800" size="100,100">&lt;h2 class=&quot;fancy&quot;&gt;遊戲關卡&lt;/h2&gt;&lt;h1&gt;復原廟中立柱「本色」&lt;/h1&gt;
+&lt;&lt;/linkreplace&gt;&gt;&lt;&lt;/linkappend&gt;&gt;</tw-passagedata><tw-passagedata pid="161" name="第四章關卡2" tags="autosave center" position="3600,800" size="100,100">&lt;&lt;set $colorchoice to 1&gt;&gt;&lt;h2 class=&quot;fancy&quot;&gt;遊戲關卡&lt;/h2&gt;&lt;h1&gt;復原廟中立柱「本色」&lt;/h1&gt;
 @@color:crimson;根據玄天上帝的指示，廟中立柱被施法的油漆污染，請你們將其復原「本色」。@@
 
 對照@@color:green;廟中立柱的實際顏色@@，找出被汙染的立柱復原顏色。
 
-&lt;&lt;button &#39;復原立柱&#39; &#39;第四章關卡2-1&#39;&gt;&gt;&lt;&lt;/button&gt;&gt;</tw-passagedata><tw-passagedata pid="162" name="第四章關卡2-1" tags="autosave center" position="3700,800" size="100,100">&lt;&lt;if $colorchoice is 5&gt;&gt;&lt;&lt;goto &#39;第四章關卡2-1判斷&#39;&gt;&gt;&lt;&lt;else&gt;&gt;&lt;h1&gt;第 $colorchoice 根立柱&lt;/h1&gt;
+&lt;&lt;button &#39;復原立柱&#39; &#39;第四章關卡2-1&#39;&gt;&gt;&lt;&lt;/button&gt;&gt;</tw-passagedata><tw-passagedata pid="162" name="第四章關卡2-1" tags="autosave center" position="3700,800" size="100,100">&lt;&lt;if $rightcolor is 5&gt;&gt;&lt;&lt;goto &#39;第四章關卡2-1判斷&#39;&gt;&gt;&lt;&lt;else&gt;&gt;&lt;h1&gt;第 $colorchoice 根立柱&lt;/h1&gt;
 &lt;&lt;set $random to random(1,5)&gt;&gt;&lt;&lt;= &quot;&lt;img src=&#39;&quot; + setup.ImagePath + &quot;立柱&quot; + $random +&quot;.png&#39; width=&#39;50%&#39;&gt;&quot;&gt;&gt;
 
 &lt;&lt;button &#39;保留顏色&#39; &#39;第四章關卡2-1&#39;&gt;&gt;&lt;&lt;if $random is 4&gt;&gt;&lt;&lt;set $rightcolor += 1&gt;&gt;&lt;&lt;/if&gt;&gt;&lt;&lt;set $colorchoice += 1&gt;&gt;&lt;&lt;/button&gt;&gt;
@@ -6480,7 +6480,7 @@ A為&quot;一(1)&quot;、B為&quot;三(3)&quot;、C為&quot;祀(4)&quot;、D為&
 從實際觀察可知，廟中立柱的顏色是黑色，非黑色的立柱就是被汙染的立柱！
 
 &lt;&lt;linkreplace &#39;告訴我正確答案&#39;&gt;&gt;黑色立柱選「保留顏色」，其他顏色的立柱選「刮除汙染」。&lt;&lt;/linkreplace&gt;&gt;&lt;&lt;/linkappend&gt;&gt;
-&lt;&lt;button &#39;返回&#39; &#39;第四章關卡2-1&#39;&gt;&gt;&lt;&lt;/button&gt;&gt;
+&lt;&lt;button &#39;返回&#39; &#39;第四章關卡2&#39;&gt;&gt;&lt;&lt;/button&gt;&gt;
 &lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="164" name="第四章3" tags="autosave center" position="3600,300" size="100,100">&lt;&lt;set $story to 1&gt;&gt;
 &lt;h2 class=&quot;fancy&quot;&gt;第四章&lt;/h2&gt;&lt;h1&gt;追查&lt;/h1&gt;
 &lt;div id=&#39;story&#39;&gt;&lt;&lt;include &#39;第四章3內文&#39;&gt;&gt;&lt;/div&gt;
