--- a/tainanfist/demo.html
+++ b/tainanfist/demo.html
@@ -4210,7 +4210,7 @@ Normal text. Normal text. Normal text. Normal text. Normal text. //emphasised te
 
 &lt;&lt;button &quot;Button&quot; &quot;More Styles&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;</tw-passagedata><tw-passagedata pid="8" name="social media" tags="edit nobr" position="100,700" size="100,100">&lt;!-- POPULATE THE SOCIAL MEDIA LINKS --&gt;
 
-&lt;a href=&quot;https://line.me/ti/g2/yAoKVCBKPvbC1ZIMuD7RfYKtpEZPBzzhYRpdxw?utm_source=invitation&amp;utm_medium=link_copy&amp;utm_campaign=default&quot; target=&quot;_blank&quot;&gt;&lt;i class=&quot;fa-brands fa-square-facebook&quot;&gt;&lt;/i&gt;&lt;/a&gt;
+&lt;a href=&quot;https://line.me/ti/g2/yAoKVCBKPvbC1ZIMuD7RfYKtpEZPBzzhYRpdxw?utm_source=invitation&amp;utm_medium=link_copy&amp;utm_campaign=default&quot; target=&quot;_blank&quot;&gt;&lt;i class=&quot;fa-brands fa-line&quot;&gt;&lt;/i&gt;&lt;/a&gt;
 
 &lt;a href=&quot;https://www.google.com/maps/d/embed?mid=1hsnY3GKASKThnXv0x_o_Io5TPjjQVB8&amp;ehbc=2E312F&quot; target=&quot;_blank&quot;&gt;&lt;i class=&quot;fa-solid fa-map-location-dot&quot;&gt;&lt;/i&gt;&lt;/a&gt;
 
