--- a/tainanfist/demo.html
+++ b/tainanfist/demo.html
@@ -6630,7 +6630,7 @@ A為&quot;一(1)&quot;、B為&quot;三(3)&quot;、C為&quot;祀(4)&quot;、D為&
 &lt;h3&gt;五行符號與相生相剋圖&lt;/h3&gt;
 &lt;img src=&quot;media/img/wuxingsymbol.png&quot; width=&quot;80%&quot;&gt;
 
-&lt;i&gt;天地門一種極具代表性的文化元素，常被運用在各類文獻紀錄與成員交流。這些符號以五行為基礎，分別代表火、木、水、金、土。&lt;/i&gt;
+&lt;i&gt;天地門一種極具代表性的文化元素，常被運用在各類文獻紀錄與拳師交流。這些符號以五行為基礎，分別代表火、木、水、金、土。&lt;/i&gt;
 &lt;i&gt;在天地門拳法理論中，五行相生相剋圖是不可或缺的一環。結合五行符號，以精簡的形式呈現五行之間的相生相剋關係，從而更加靈活地應用於實戰中。&lt;/i&gt;
 &lt;img src=&quot;media/img/wuxing.png&quot; width=&quot;90%&quot;&gt;
 &lt;/div&gt;</tw-passagedata></tw-storydata>
