--- a/tainanfist/demo.html
+++ b/tainanfist/demo.html
@@ -98,7 +98,7 @@ var LZString={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz01234
 		<div id="init-lacking"><p>Browser lacks capabilities required to play.</p><p>Upgrade or switch to another browser.</p></div>
 		<div id="init-loading"><div>Loading&hellip;</div></div>
 	</div>
-	<tw-storydata name="府城謎拳-天地無門" startnode="6" creator="Twine" creator-version="2.8.0" format="SugarCube" format-version="2.36.1" ifid="2AC7FFE6-4787-4918-8961-4466A7EBC28E" options="" tags="" zoom="0.6" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@charset "UTF-8";
+	<tw-storydata name="府城謎拳-天地無門" startnode="6" creator="Twine" creator-version="2.6.2" format="SugarCube" format-version="2.36.1" ifid="2AC7FFE6-4787-4918-8961-4466A7EBC28E" options="" tags="" zoom="0.6" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@charset "UTF-8";
 /* 匯入Animate.css  */
 importStyles("https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css");
 /* 自訂樣式： 字型 */
@@ -4377,7 +4377,7 @@ Normal text. Normal text. Normal text. Normal text. Normal text. //emphasised te
 遊戲顧問：羅士哲
 學術顧問、遊戲行政：盧俐雯
 
-特別感謝：李孟璇、高嘉晨、鄭凱中、于淓、汪宏靜、李佩柔、蕭汝玲、劉凡齊、李汶洳、蕭國楊、謝金魚、杏源咖啡</tw-passagedata><tw-passagedata pid="18" name="序章0-1" tags="center nofooter bg1 title" position="875,100" size="100,100">&lt;&lt;run clearContent(&quot;decoration-separator&quot;)&gt;&gt;&lt;&lt;notify&gt;&gt;序章&lt;&lt;/notify&gt;&gt;
+特別感謝：李孟璇、高嘉晨、鄭凱中、于淓、汪宏靜、李佩柔、蕭汝玲、劉凡齊、李汶洳、蕭國楊、謝金魚、杏源珈琲</tw-passagedata><tw-passagedata pid="18" name="序章0-1" tags="center nofooter bg1 title" position="875,100" size="100,100">&lt;&lt;run clearContent(&quot;decoration-separator&quot;)&gt;&gt;&lt;&lt;notify&gt;&gt;序章&lt;&lt;/notify&gt;&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;&lt;div style=&quot;max-width: 400px; margin: 0 auto;background-color: rgb(255 255 255 / 70%); border-radius: 20px;&quot;&gt;
 府城，
 人、神、妖三者共存的奇幻世界。
