--- a/HK/demo.html
+++ b/HK/demo.html
@@ -3574,7 +3574,7 @@ Macro.add('message', {
 
 &lt;nav&gt;
 &lt;&lt;link &quot;重新開始&quot;&gt;&gt;&lt;&lt;run Save.autosave.load()&gt;&gt;&lt;&lt;/link&gt;&gt;
-&lt;&lt;link &quot;載入遊戲&quot;&gt;&gt;&lt;&lt;run UI.saves();&gt;&gt;&lt;&lt;/link&gt;&gt;
+&lt;&lt;link &quot;載入體驗&quot;&gt;&gt;&lt;&lt;run UI.saves();&gt;&gt;&lt;&lt;/link&gt;&gt;
 &lt;/nav&gt;
 
 &lt;div class=&quot;story-banner&quot;&gt;
@@ -3594,8 +3594,8 @@ Macro.add('message', {
 &lt;/div&gt;
 
 &lt;nav&gt;
-&lt;span style=&quot;text-size:16px&quot;&gt;&lt;&lt;link &quot;開新遊戲&quot; &quot;起始1&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
-&lt;&lt;link &quot;設置遊戲&quot;&gt;&gt;&lt;&lt;run UI.settings();&gt;&gt;&lt;&lt;/link&gt;&gt;
+&lt;span style=&quot;text-size:16px&quot;&gt;&lt;&lt;link &quot;開新體驗&quot; &quot;起始1&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+&lt;&lt;link &quot;互動設置&quot;&gt;&gt;&lt;&lt;run UI.settings();&gt;&gt;&lt;&lt;/link&gt;&gt;
 &lt;/nav&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="7" name="Chapter I" tags="" position="0,925" size="100,100">!Heading 1
 !!Heading 2
