--- a/HK/demo.html
+++ b/HK/demo.html
@@ -1037,7 +1037,7 @@ footer #story-menu button {
 
 #ui-dialog-body.restart p {
   background-color: var(--white);
-  color: #2a271f;
+  color: var(--black);
   padding: 10px;
   margin: 0;
 }
