--- a/HK/demo.html
+++ b/HK/demo.html
@@ -4023,7 +4023,7 @@ _contents
 &lt;&lt;button &#39;幫助朋友&#39; &#39;第一關2&#39;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;&lt;/replace&gt;&gt;
 &lt;&lt;/if&gt;&gt;\
 &lt;&lt;if $story is 4&gt;&gt;\
-&lt;&lt;replace &#39;#storylink&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;你繼續往前走。&lt;&lt;timed 1.5s&gt;&gt;&lt;&lt;set $levelcount += 1&gt;&gt;&lt;&lt;shakescreen&gt;&gt;&lt;&lt;/timed&gt;&gt;&lt;&lt;timed 2s&gt;&gt;&lt;&lt;goto &#39;轉場&#39;&gt;&gt;&lt;&lt;/timed&gt;&gt;
+&lt;&lt;replace &#39;#storylink&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;你繼續往前走。&lt;&lt;timed 1.5s&gt;&gt;&lt;&lt;shakescreen&gt;&gt;&lt;&lt;/timed&gt;&gt;&lt;&lt;timed 2s&gt;&gt;&lt;&lt;goto &#39;轉場&#39;&gt;&gt;&lt;&lt;/timed&gt;&gt;
 &lt;&lt;/if&gt;&gt;&lt;&lt;/if&gt;&gt;\</tw-passagedata><tw-passagedata pid="37" name="第一關2" tags="center autosave" position="800,500" size="100,100">&lt;&lt;set $story to 1&gt;&gt;\
 &lt;h2&gt;解決朋友問題&lt;/h2&gt;
 &lt;div id=&#39;story&#39;&gt;&lt;&lt;include &#39;第一關2內文&#39;&gt;&gt;&lt;/div&gt;
