--- a/transfer.html
+++ b/transfer.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>轉址</title>
-	<meta http-equiv="refresh" content="0;url=https://google.com" />
+	<meta http-equiv="refresh" content="0;url=https://www.figma.com/proto/P2LfPN0mH6k6AMoBJ4EQSo/Untitled?node-id=2-200&t=bnMEi6cqkie6avBk-1" />
   </head>
   <body>
   
